force-app/main/default/objects/Survey_Answer__c/Survey_Answer__c.object-meta.xml
<CustomObject>
    <description>Individual survey question answers capturing text, numeric, choice and photo responses (MOD-04 Outlet Visit Execution)</description>
    <label>Survey Answer</label>
    <nameField>
        <label>Survey Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>