force-app/main/default/objects/Survey_Answer__c/fields/Answer_Choice__c.field-meta.xml
<CustomField>
    <fullName>Answer_Choice__c</fullName>
    <label>Answer Choice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>