force-app/main/default/objects/Survey_Answer__c/fields/Answer_Text__c.field-meta.xml
<CustomField>
    <fullName>Answer_Text__c</fullName>
    <label>Answer Text</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>