force-app/main/default/objects/Survey_Answer__c/fields/Survey_Question__c.field-meta.xml
<CustomField>
    <fullName>Survey_Question__c</fullName>
    <label>Survey Question</label>
    <type>Lookup</type>
    <referenceTo>Survey_Question__c</referenceTo>
    <relationshipLabel>Survey Answers</relationshipLabel>
    <relationshipName>Survey_Answers</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>