force-app/main/default/objects/Survey_Answer__c/fields/Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response__c</fullName>
    <label>Survey Response</label>
    <type>MasterDetail</type>
    <referenceTo>Survey_Response__c</referenceTo>
    <relationshipLabel>Survey Answers</relationshipLabel>
    <relationshipName>Survey_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>